<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity">

    <TextView
        android:id="@+id/pro_oval1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pro_oval1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pro_oval2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/pro_oval3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/pro_oval5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/pro_oval5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/pro_oval6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/pro_oval7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/pro_oval9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/pro_oval9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/pro_oval10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval12"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/pro_oval11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/pro_oval13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/pro_oval13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval15"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/pro_oval14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval16"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/pro_oval15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />




    <TextView
        android:id="@+id/pro_oval17"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval18"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/pro_oval17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval19"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/pro_oval18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pro_oval20"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/pro_oval20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/pro_oval19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>