<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".MajorActivity">

    <TextView
        android:id="@+id/major_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dadada"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:layout_constraintVertical_weight="2"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/maj_oval1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maj_oval1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maj_oval2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/maj_oval3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/maj_oval5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/maj_oval5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/maj_oval6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/maj_oval7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/maj_oval9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/maj_oval9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/maj_oval10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval12"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/maj_oval11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/maj_oval13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/maj_oval13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval15"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/maj_oval14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval16"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/maj_oval15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="MissingConstraints" />




    <TextView
        android:id="@+id/maj_oval17"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval18"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/maj_oval17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval19"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/maj_oval18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/maj_oval20"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/maj_oval20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/maj_oval19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>